@@ -3,8 +3,6 @@ package Java8;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.Optional;
-import java.util.OptionalDouble;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -12,7 +10,6 @@ public class ArraysStreamSumAverage {
     public static void main(String[] args) {
         int[] arr = {1, 2, 3, 4, 5, 6};
         Integer[] arrNonPrimitive = {1, 2, 3, 4};
-        Stream.of(arrNonPrimitive).forEach(System.out::println);
 
         //Sum of sq of all even number
         int sumOfSquareOfEvenNumbers = Arrays.stream(arr).
@@ -21,16 +18,15 @@ public class ArraysStreamSumAverage {
 
         List<Integer> list = Arrays.stream(arr)  // returns IntStream (primitive int)
                 .boxed()      // converts to Stream<Integer>
-                .collect(Collectors.toList()); // collect to List<Integer>
+                .toList(); // collect to List<Integer>
 
-        System.out.println(sumOfSquareOfEvenNumbers);
+        List<Integer> list1 = Arrays.stream(arrNonPrimitive)  // returns IntStream (primitive int)
+                .toList(); // collect to List<Integer> //No need of boxed
 
         //Average of odd number
-        Double average = Arrays.stream(arr).filter(a->a%2!=0).average().orElse(0.0);
+        Double average = Arrays.stream(arr).filter(a -> a % 2 != 0).average().orElse(0.0);
         System.out.println(average);
 
-        //Product of numbers
-        int product=  Arrays.stream(arr).reduce(1,(a,b)->a*b);
 
     }
 }
