@@ -2,6 +2,7 @@ package Java8;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -12,7 +13,7 @@ public class MapVsFlatMap {
         arrL.add(Arrays.asList("pramod", "das"));
         arrL.add(Arrays.asList("sonali", "kumari"));
 
-        List<String> flateningExample = arrL.stream().flatMap(a->a.stream()).map(s->s.toUpperCase()).collect(Collectors.toList());
+        List<String> flateningExample = arrL.stream().flatMap(Collection::stream).map(String::toUpperCase).toList();
         System.out.println(flateningExample);
     }
 }
